--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,12 +1,12 @@
 @import 'tailwindcss';
+@import 'tailwindcss/typography';
+@import 'tailwindcss/forms';
+@import 'tailwindcss/line-clamp';
+@import 'tailwindcss/aspect-ratio';
+@import 'tailwindcss/container-queries';
 
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
-@source '../views'
-@theme {
+:root {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
