--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,12 +1,3 @@
-@import 'tailwindcss';
-@import 'tailwindcss/typography';
-@import 'tailwindcss/forms';
-@import 'tailwindcss/line-clamp';
-@import 'tailwindcss/aspect-ratio';
-@import 'tailwindcss/container-queries';
-
-
-:root {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
